--- a/templates/A-Star.html
+++ b/templates/A-Star.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordle Solver - Algoritmo A*</title>
+    <title>Hello Wordle - Algoritmo A*</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
