--- a/templates/Minimax.html
+++ b/templates/Minimax.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordle Solver - Algoritmo Minimax</title>
+    <title>Hello Wordle - Algoritmo Minimax</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
