Changed solution approach and names

--- a/templates/Greedy.html
+++ b/templates/Greedy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Wordle - Algoritmo A*</title>
+    <title>Hello Wordle - Algoritmo Best-first Greedy</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body>
-    <h1>Wordle Solver - Algoritmo A*</h1>
+    <h1>Wordle Solver - Algoritmo Best-first Greedy</h1>
 
     <div>
         <p><strong>Parola da indovinare:</strong> {{ solution }}</p>
